--- a/Walker.AstralCodex/translations/french.json
+++ b/Walker.AstralCodex/translations/french.json
@@ -1,42 +1,42 @@
 {
     "$schema": "https://raw.githubusercontent.com/xen-42/outer-wilds-new-horizons/main/NewHorizons/Schemas/translation_schema.json",
     "UIDictionary": {
-        "Thank you for downloading Astral Codec!\n\n\nIn death a new mystery will be revealed.": "Astral Codecをダウンロードしていただきありがとうございます！\n\n\n死によって新たな謎が明かされます。",
-        "Secondary Probe": "第2探査機",
-        "Lingering Chime": "名残り奏",
-        "Astral Codec": "アストラル･コーデック",
-        "Chime Transmitter": "奏の伝送装置",
-        "Translation Probe Cinder": "翻訳探査機 残り火",
-        "Translation Probe Thicket": "翻訳探査機 密生林",
-        "Translation Probe Astral": "翻訳探査機 アストラル",
-        "Write Addendum": "追記する"
+        "Thank you for downloading Astral Codec!\n\n\nIn death a new mystery will be revealed.": "Merci d'avoir téléchargé Astral Codec !\n\n\nDans la mort vous sera révélé un mystère.",
+        "Secondary Probe": "Sonde secondaire",
+        "Lingering Chime": "Tintement Perpétuel",
+        "Astral Codec": "Codec Astral",
+        "Chime Transmitter": "Émetteur de Tintement",
+        "Translation Probe Cinder": "Sonde de Traduction Cendre",
+        "Translation Probe Thicket": "Sonde de Traduction Taillis",
+        "Translation Probe Astral": "Sonde de Traduction Astral",
+        "Write Addendum": "Écrire un Addendum"
     },
     "DialogueDictionary": {
         // Slate
-        "Have you noticed the sky's green?": "空が緑色になってるのに気づいてる？",
-        "It looks perfectly normal to me.": "私にはまったくもって普通に見えるぞ。",
-        "Are you sure you're alright? I know Chert and Riebeck both got a little green around the gills before takeoff. But never like this.": "本当に大丈夫か？ChertもRiebeckも出発前にエラ周りが少し緑色になってたのは知ってる。だが、決してそのようなものじゃない。",
-        "Did you know there's a laser pointed at your head?": "あなたの頭にレーザーが照射されてるのを知ってる？",
-        "Like I'm being scanned or something? <![CDATA[<i>Creepy</i>]]>...": "まるで私がスキャンか何かされてるかのように？<![CDATA[<i>気味が悪い</i>]]>…",
-        "I haven't heard that ghost story before, Hatchling. I'll have to use it on Hornfels sometime.": "そんな怪談は初めて聞いたよ、ひよっ子。いつかHornfelsに話してやることにしよう。",
-        "Did your campfire really fly off?": "あなたのキャンプファイヤーは本当に飛んでいったの？",
-        "Sure did. Spookiest thing I've ever seen. It just up and lifted off into the sky all on its own.": "確かにそうだ。私がこれまで見たなかで最も不気味なものだった。あれはそのまま上昇し、ひとりでに空へ飛び去っていった。",
-        "I wonder where it could be now.": "やつは今どこにいるんだろうな。",
-        "I found it.": "それを見つけた。",
-        "You found it! Where!?": "見つけた！どこで！？",
-        "In an invisible alien spacecraft below the sun.": "太陽の下にある目に見えない異星人の宇宙船の中だ。",
-        "Okay. Now I know you're pulling my leg.": "わかった。今ならお前が私をからかってるんだとな。",
+        "Have you noticed the sky's green?": "Tu as remarqué que le ciel est vert ?",
+        "It looks perfectly normal to me.": "Il m'a l'air tout à fait normal.",
+        "Are you sure you're alright? I know Chert and Riebeck both got a little green around the gills before takeoff. But never like this.": "T'es sûr que ça va ? Je sais que Chail et Riébeck ont toujours tous les deux un peu mauvaise mine avant le décollage. Mais jamais comme ça.",
+        "Did you know there's a laser pointed at your head?": "Tu sais que t'as un laser pointé sur ta tête ?",
+        "Like I'm being scanned or something? <![CDATA[<i>Creepy</i>]]>...": "Comme si j'étais scanné ou quelque chose comme ça ? <![CDATA[<i>Flippant</i>]]>...",
+        "I haven't heard that ghost story before, Hatchling. I'll have to use it on Hornfels sometime.": "Je n'ai jamais entendu cette histoire d'horreur avant, p'tite pierre. Je la raconterai sûrement à Cornée.",
+        "Did your campfire really fly off?": "Ton feu de camp s'est vraiment envolé ?",
+        "Sure did. Spookiest thing I've ever seen. It just up and lifted off into the sky all on its own.": "Absolument. Le truc le plus terrifiant de toute ma vie. Il a juste décollé du sol et s'est volatilisé dans le ciel tout seul.",
+        "I wonder where it could be now.": "Je me demande où est-ce qu'il est maintenant.",
+        "I found it.": "Je l'ai trouvé.",
+        "You found it! Where!?": "Tu l'as trouvé ? Où ça !?",
+        "In an invisible alien spacecraft below the sun.": "Dans un vaisseau spatial alien invisible en dessous du soleil.",
+        "Okay. Now I know you're pulling my leg.": "Okay. Maintenant j'sais que tu me fais marcher.",
 
-        "Hornfels insisted I bring this recorder with me to \"document any unknown Nomai artifacts\". If you ask me, I think they're being a little too optimistic. I'm not going to find anything of interest on such a routine expedition.": "Hornfelsは“未知のNomaiの遺物を記録する”ため私にこのレコーダーを持っていくようにと主張した。私に言わせればあいつは少し楽観的すぎると思う。こんな日常的な探索では興味深いものなんて何も見つからないだろう。",
-        "Oh well. Here we go anyways. Slate's Expedition Log: Day 1": "まあいい。とにかく行こう。Slateの探索記録:1日目",
-        "I'm out here by the ol' Nomai ruins to see if I can scrounge up an intact warp core or two for the hatchling. Gotta get their scout properly equipped before they set out for the stars.": "私は、ひよっ子のために無傷のワープコアを1つか2つばかり漁りに古いNomaiの遺跡のそばに来ている。星々に向けて出発する前にあいつのスカウトに適切な装備を整えてやらなくちゃならない。&lt;i&gt;&lt;/i&gt;",
-        "I found some pretty quickly by that weird spiral ruin. Four of them were even still intact. Jackpot!": "あの奇妙な螺旋遺跡のそばですぐにいくつか見つかった。そのうち4つはまだ無傷だった。大当たりだ！",
-        "I maaaay have gotten a bit too late of a start though and the sun's already setting, so I might as well make camp here before heading back. Good thing I brought plenty of marshmallows, eh?": "まあ出発が少し遅れてしまったし太陽ももう沈んでるので、帰る前にここでキャンプした方がいいかもしれないなあ。マシュマロをたくさん持ってきてよかっただろう？",
-        "<![CDATA[<size=60>]]>Ahhhhhhhhh!<![CDATA[</size>]]> What's going on?! Wait no, get back here! Take that!": "<![CDATA[<size=60>]]>ああああああ！<![CDATA[</size>]]>何が起きてる？！待って、いや、ここに戻れ！これでもか！",
-        "Ok. <![CDATA[<Pause=0.5>]]>Calm down. <![CDATA[<Pause=0.5>]]>What the heck? What was that thing?": "ああ。<![CDATA[<Pause=0.5>]]>落ち着け。<![CDATA[<Pause=0.5>]]>いったい何だ？あれは何だったんだ？",
-        "I woke up to this faint ringing noise, almost too quiet to hear. When I opened my eyes, my campfire was moving. It just... lifted into the air like something had grabbed it. Then it floated off into the sky like some kind of ghost.": "私はこのかすかな鳴り響く音で目が覚めたが、いやあまりにも静かでほとんど聞こえなかったが。目を開けるとキャンプファイヤーが動いていたんだ。それはただ…何かにつかまれたかのように空中に持ち上がった。それからは幽霊かのように空へ飛び去っていった。",
-        "I whacked at it with my marshmallow stick and it sounded like I hit something. But it just kept going. It even took the warp cores I found too!": "マシュマロスティックで叩いたら何かに当たったような音がした。だがそれは続いたんだ。見つけたワープコアすら奪っていった！&lt;i&gt;&lt;/i&gt;",
-        "That can't have been real, right? I must have had too much sap wine recently. I'm going back to the village and never camping here again. Hornfels can make one of the other travelers go find a core.": "現実であるはずがないよな？最近樹液ワインを飲みすぎたに違いない。私は村へ戻り、二度とここでキャンプをすることはないだろう。Hornfelsは他の旅人にコアを探しに行かせればいい。",
+        "Hornfels insisted I bring this recorder with me to \"document any unknown Nomai artifacts\". If you ask me, I think they're being a little too optimistic. I'm not going to find anything of interest on such a routine expedition.": "Cornée a insisté pour que je prenne cet enregistreur avec moi pour \"documenter tout artéfact Nomaï inconnu\". À mon avis, je pense qu'il est un peu trop optimiste. C'est pas comme si j'allais trouver quelque chose d'intéressant dans ce genre d'expédition de routine.",
+        "Oh well. Here we go anyways. Slate's Expedition Log: Day 1": "M'enfin bon. C'est parti. Journal d'Expédition d'Ardoise: Jour 1",
+        "I'm out here by the ol' Nomai ruins to see if I can scrounge up an intact warp core or two for the hatchling. Gotta get their scout properly equipped before they set out for the stars.": "J'suis là dans les vieilles ruines Nomaï pour voir si je peux dénicher un ou deux générateurs de distorsion pour p'tite pierre. Faudrait qu'il ait son guetteur bien équippé avant de s'envoler dans les étoiles.",
+        "I found some pretty quickly by that weird spiral ruin. Four of them were even still intact. Jackpot!": "J'en ai trouvé plutôt vite près des ruines en spirale bizarres là-bas. Quatre d'entre eux sont même encore intacts. Jackpot !",
+        "I maaaay have gotten a bit too late of a start though and the sun's already setting, so I might as well make camp here before heading back. Good thing I brought plenty of marshmallows, eh?": "J'ai peeuuuuut-être commencé un peu tard par contre et le soleil est en train de se coucher, donc je vais me poser un camp ici avant de continuer. Heureusement que j'ai pris plein de chamallows, hein ?",
+        "<![CDATA[<size=60>]]>Ahhhhhhhhh!<![CDATA[</size>]]> What's going on?! Wait no, get back here! Take that!": "<![CDATA[<size=60>]]>Ahhhhhhhhh!<![CDATA[</size>]]> Qu'est-ce que c'est que ça ?! Attends, naaan, reviens ici ! Prends ça!",
+        "Ok. <![CDATA[<Pause=0.5>]]>Calm down. <![CDATA[<Pause=0.5>]]>What the heck? What was that thing?": "Ok. <![CDATA[<Pause=0.5>]]>J'me calme. <![CDATA[<Pause=0.5>]]>Qu'est-ce que... C'était quoi ce truc ?",
+        "I woke up to this faint ringing noise, almost too quiet to hear. When I opened my eyes, my campfire was moving. It just... lifted into the air like something had grabbed it. Then it floated off into the sky like some kind of ghost.": "Un son très léger de clochette m'a réveillé, presque imperceptible. Quand j'ai ouvert les yeux, mon feu de camp bougeait tout seul. Il a juste... décollé dans les airs comme si quelque chose l'avait attiré. Et puis il a disparu dans le ciel comme un fantôme.",
+        "I whacked at it with my marshmallow stick and it sounded like I hit something. But it just kept going. It even took the warp cores I found too!": "J'ai lancé mon bâton à chamallows dans sa direction et je l'ai entendu toucher. Mais il a juste continué. Il a même pris les générateurs à distorsion que j'avais trouvé !",
+        "That can't have been real, right? I must have had too much sap wine recently. I'm going back to the village and never camping here again. Hornfels can make one of the other travelers go find a core.": "C'est pas réel, hein ? Je sirote probablement un peu trop de vin en ce moment. Je vais retourner au village et plus jamais camper ici. Cornée pourra convaincre un autre voyageur de trouver un générateur à distorsion.",
 
         // Chert
         "Chert’s Research Notes — property of Chert!": "Chertの調査メモ — Chertの私物！",
